offers first stage

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -55,6 +55,12 @@
     height: 17px;
   }
 
+  &_size32 {
+    min-width: 32px;
+    width: 32px;
+    height: 32px;
+  }
+
   &_orange {
     background-color: $color-hot-desk;
   }
