--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -349,4 +349,26 @@
       }
     }
   }
+
+  &_short {
+
+    #{$b}__text {
+      padding-left: 28px;
+      padding-right: 28px;
+    }
+
+    &#{$b}_border {
+      #{$b}__text {
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+    }
+
+    &#{$b}_thin-border {
+      #{$b}__text {
+        padding-left: 26px;
+        padding-right: 26px;
+      }
+    }
+  }
 }
