--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -35,10 +35,12 @@ include ../blocks/map/map
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/note/note
+include ../blocks/offer/offer
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-list/offer-list
 include ../blocks/offer-select/offer-select
+include ../blocks/offers/offers
 include ../blocks/overlay/overlay
 include ../blocks/page-title/page-title
 include ../blocks/page/page
@@ -78,7 +80,6 @@ include ../components/lead/lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
-include ../components/offer/offer
 include ../components/page-header/page-header
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
