--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -198,6 +198,9 @@ block content
           +button-icon('', 'select-arrow')(href="#") .button_icon
           +button()(href="#")._square .button_square
           +button()(href="#")._border._square .button_border._square
+          +button()(href="#")._wide .button_wide
+          +button()(href="#")._short .button_short
+          +button()(href="#")._border._short .button._border._short
         +ui-description При клике на .js-anchor происходит скролл к элементу из атрибута href. Блок: blocks/js-functions/anchor.js
         +button()(href="#section0").js-anchor .js-anchor
         +ui-description При клике на .js-freeze скролл страницы блокируется, на .js-unfreeze разблокируется. Блок: blocks/js-functions/freeze.js. Функции freeze() и unfreeze() можно импортировать и использовать в модалках, бургере или где-то еще
@@ -784,8 +787,8 @@ block content
     //- Boxes
     +ui-section
       +ui-section-head
-        h2 Маркеры помещений (цветные квадраты)
-        p Блок: blocks/boxes
+        h2 Квадраты (Boxes)
+        p Блок: blocks/boxes и blocks/box
       +ui-section-content
         +ui-description .box (по дефолту .box - бесцветный, поэтому для демонстраци окрашен)
           +box._orange
@@ -795,6 +798,14 @@ block content
           +box._orange._smaller
         +ui-description .box._big
           +box._orange._big
+        +ui-description .box._size9
+          +box._orange._size9
+        +ui-description .box._size10
+          +box._orange._size10
+        +ui-description .box._size17
+          +box._orange._size17
+        +ui-description .box._size32
+          +box._orange._size32
         +ui-description .box._orange
           +box._orange
         +ui-description .box._red
