--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -88,6 +88,8 @@ $color-offer-disable: #798394;
 $color-hint-bg: #151b25;
 $color-gray-lighter: #959fad;
 $color-status-bg: #a7afb8;
+$color-offer-empty-text: #848d99;
+$color-border-dark: #919494;
 
 
 // ##########
