--- a/app/blocks/offer/offer.scss
+++ b/app/blocks/offer/offer.scss
@@ -8,8 +8,38 @@
   padding-top: 20px;
   padding-bottom: 23px;
 
+  @include screen('lg') {
+    padding-top: 23px;
+    padding-bottom: 27px;
+  }
+
+  @include screen('sm') {
+    padding-top: 26px;
+    padding-bottom: 0;
+  }
+
   &:not(:last-child) {
-    border-bottom: 1px solid $color-border-light;
+
+    &::after {
+      @include pseudo;
+
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 1px;
+      width: auto;
+      background-color: $color-border-light;
+      z-index: 0;
+
+      @include screen('sm') {
+        left: -20px;
+        right: -20px;
+      }
+    }
+
+    @include screen('sm') {
+      margin-bottom: 6px;
+    }
   }
 
   &::before {
@@ -51,14 +81,23 @@
 
     &_left {
       margin-right: 50px;
+      transition: opacity $ease-main;
+      box-sizing: border-box;
 
       @include screen('lg') {
+        padding-left: 26px;
         margin-right: 30px;
       }
 
       @include screen('sm') {
+        padding-left: 0;
         margin-right: 0;
+        margin-bottom: 20px;
         width: 100%;
+      }
+
+      #{$b}.is-disabled & {
+        opacity: .5;
       }
     }
 
@@ -76,5 +115,115 @@
 
   .switch {
     flex-wrap: nowrap;
+  }
+
+  &__switch {
+    &:not(:last-child) {
+      margin-bottom: 40px;
+
+      @include screen('lg') {
+        margin-bottom: 28px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 23px;
+        width: 100%;
+      }
+    }
+  }
+
+  &__title {
+    @include text-big;
+
+    font-weight: 700;
+
+    @include screen('sm') {
+      @include text-mid;
+
+      line-height: (20/17);
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 17px;
+
+      @include screen('lg') {
+        margin-bottom: 25px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 16px;
+      }
+    }
+  }
+
+  &__text {
+    @include text16;
+
+    line-height: (23/16);
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: 1.54;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: auto;
+    opacity: 0;
+    transition: opacity $ease-main;
+
+    @include screen('lg') {
+      flex-direction: column;
+      align-items: flex-end;
+      opacity: 1;
+      padding-bottom: 6px;
+    }
+
+    @include screen('sm') {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      align-items: stretch;
+      width: 100%;
+      padding-bottom: 0;
+    }
+
+    #{$b}:hover & {
+      opacity: 1;
+    }
+  }
+
+  &__button {
+    @include text-mid;
+
+    line-height: 1.2;
+    font-weight: 700;
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: 1.2;
+      flex: 1;
+      border: 1px solid $color-border-light;
+      text-align: center;
+      padding: 14px 8px;
+    }
+
+    &:not(:first-child) {
+      margin-left: 26px;
+
+      @include screen('lg') {
+        margin-top: 25px;
+        margin-left: 0;
+      }
+
+      @include screen('sm') {
+        margin-top: 0;
+        border-right-width: 0;
+      }
+    }
   }
 }
