start popup && blog && blog-page

--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -13,6 +13,7 @@
   background-color: transparent;
   -webkit-appearance: none;
   will-change: position;
+  backface-visibility: hidden;
 
   @include screen('xl') {
     min-width: 42px;
@@ -53,6 +54,7 @@
       transition-delay: 0s, .15s, 0s;
       background-clip: padding-box;
       overflow: hidden;
+      backface-visibility: hidden;
 
       @include screen('sm') {
         height: 3px;
@@ -115,6 +117,7 @@
     transform-origin: 0 50%;
     background-clip: padding-box;
     overflow: hidden;
+    backface-visibility: hidden;
 
     @include screen('sm') {
       top: 10px;
