--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -22,3 +22,21 @@
     overflow: initial;
   }
 }
+
+.popup {
+  display: block;
+  width: 100%;
+  max-width: 800px;
+  padding: 0;
+
+  &__wrapper {
+    display: block;
+    max-height: 100%;
+  }
+
+  &__content {
+    display: block;
+    height: auto;
+    padding: 30px 69px 62px;
+  }
+}
