--- a/app/components/space-info/space-info.pug
+++ b/app/components/space-info/space-info.pug
@@ -15,7 +15,7 @@ mixin space-info-buttons()
     block
 
 mixin space-info-button()
-  +button-plus('a')(href="#")._mob-small._border._plus.__button&attributes(attributes)
+  +button-plus('a')(href="#popup-add-rental-offer")._mob-small._border._plus.__button.js-popup&attributes(attributes)
     block
 
 mixin space-info-media()
