--- a/app/blocks/popups/popups.pug
+++ b/app/blocks/popups/popups.pug
@@ -4,4 +4,10 @@ mixin popups()
 
 mixin popup()
   +b.popup&attributes(attributes)
+    div.popup__wrapper.js-scrollbar-light
+      div.popup__content
+        block
+
+mixin popup-title()
+  h3.popup__title&attributes(attributes)
     block
