--- a/app/pages/host-space-offers/host-space-offers.pug
+++ b/app/pages/host-space-offers/host-space-offers.pug
@@ -84,4 +84,4 @@ block panels
     +nav-list(getData('main-menu-user.json'))
 
 block popups
-  +popup-add-offer#popup-add-rental-offer
+  //- +popup-add-offer#popup-add-rental-offer
