--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -19,6 +19,12 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -$grid-gap-vertical-big;
   }
 
+  &_bigger {
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-top: -$grid-gap-vertical-big;
+  }
+
   &_layout {
     margin-top: -50px;
     margin-left: -25px;
@@ -92,6 +98,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_big & {
       padding: $grid-gap-vertical-big $grid-gap-big/2 0;
+    }
+
+    #{$b}_bigger & {
+      padding: $grid-gap-vertical-big 30px 0;
     }
 
     #{$b}_layout & {
