--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -9,12 +9,12 @@ block content
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Main (index.html)
-        +link(href="space.html")  One Space (space.html)
-        +link(href="account-settings.html")  Account settings(account-settings.html)
+        +link(href="space.html") One Space (space.html)
+        +link(href="account-settings.html") Account settings(account-settings.html)
         +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html)
         +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html)
-        //- +link(href="blog.html") Blog (blog.html)
-        //- +link(href="blog-article.html") Blog article (blog-article.html)
+        +link(href="blog.html") Blog (blog.html)
+        +link(href="blog-article.html") Blog article (blog-article.html)
 
 block panels
   +main-menu
