--- a/app/components/space-info/space-info.scss
+++ b/app/components/space-info/space-info.scss
@@ -15,6 +15,7 @@
     @include heading-3;
 
     font-weight: 700;
+    width: 100%;
 
     @include screen('sm') {
       @include heading-4;
@@ -71,6 +72,7 @@
   &__media {
     display: block;
     width: 100%;
+    flex: none;
 
     &:not(:last-child) {
       margin-bottom: 22px;
