--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -16,6 +16,10 @@
     @include text16;
   }
 
+  &:-ms-input-placeholder {
+    color: transparent;
+  }
+
   &::placeholder {
     color: transparent;
   }
@@ -32,6 +36,10 @@
   &_points {
     padding-left: 22px;
     padding-bottom: 10px;
+
+    &:-ms-input-placeholder {
+      color: $color-placeholder;
+    }
 
     &::placeholder {
       color: $color-placeholder;
